@@ -43,6 +43,7 @@ Version 3.0.0 - SVN
  - Replace beep by alert plugin program. (Closes: #1878083)
  - Add functionality and fix security issue in runguard, thanks Thomas Rast.
  - Check for safe_mode before diff-ing tempfiles. (Closes: #1808354)
+ - Remove redundant copies of testdata by symlinks. (Closes #2805385)
 
 Version 2.2.0 - 11 August 2008
 ------------------------------
